--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container {
+  margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #1e293b;
+  min-height: 100vh;
+  padding: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+@media screen and (max-width: 576px) {
+  .app-container {
+    width: 100%;
+    padding: 0px;
+    padding-top: 30px;
+    padding-right: 15px;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.heading {
+  font-family: sans-serif;
+  font-size: 35px;
+  color: #ffffff;
+  margin: 0;
+}
+
+.line {
+  color: #ffffff;
+  width: 100px;
+}
+
+.description {
+  width: 80%;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 16px;
+  margin-top: 20px;
+  color: #ffffff;
 }
